
features:
- presolving, cut separation, primal heuristics, and strong branching now better respect time limit
- time limit is now forwarded to lp solving algorithm
- added option to write node LP and MIP relaxations to LP file from interactive shell
- modified cut selection code
- cut conversion into linear constraints after a restart now works better

fixed bugs:
- fixed bug with too long variable names
- fixed bug with strange user descriptions of plugins
- changed position of some asserts to prevent segmentation faults
- SCIPgetAvgPseudocostCount() and SCIPgetAvgPseudocostCountCurrentRun() now return the average over all integer variables instead
  of all variables, since pseudo costs are not recorded for continuous variables
- fixed wrong sorting of plugins with priorities close to INT_MIN or INT_MAX
- replaced "line" by "read" in Makefile, since "line" is non-standard
- fixed bug in variable bound constraint handler with changing bounds on multi-aggregated variables
- fixed bug in variable bounds search and insertion method
- fixed bug with LP size management in probing if column generation is used
- fixed bug with branching rules that produce only one child with no changes to the problem
- fixed bug in linear constraint handler: only tight cuts are transformed into linear constraints after restart
- fixed bug in LP file reader with row names identical to section keywords
- fixed bug that external relaxator is not reset appropriately for a new problem instance
- fixed potential bugs due to errors in resolving the LP after diving or probing
- removed wrong assert in function paramWrite()
- fixed potential bugs in SCIPpriceLoop() and priceAndCutLoop(), st. now all LP solution stati are handled appropriately
- fixed bug with uninitialized in check.awk
- fixed bug with primal heuristics reducing the cutoff bound such that the current node is cut off
- now it is possible to add original solutions
- fixed bug that cut age was not reset to zero for violated cuts

